# agentic-ai-hub

01-crewai-practical-demo/my_agentic_project/: README.md  content_stratregy.md  creative_content.md  multi-agent-report.md  pyproject.toml  single-agent-report.md  technical_documentation.md  trained_agents_data.pkl  training_data.pkl
01-crewai-practical-demo/my_agentic_project/src/my_agentic_project/: crew.py  main.py
01-crewai-practical-demo/my_agentic_project/src/my_agentic_project/config/: agents.yaml  tasks.yaml
