[project]
name = "my_agentic_project"
version = "0.1.0"
description = "my_agentic_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
my_agentic_project = "my_agentic_project.main:run"
run_crew = "my_agentic_project.main:run"
train = "my_agentic_project.main:train"
replay = "my_agentic_project.main:replay"
test = "my_agentic_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
